More specific section-name

--- a/Assets/_scss/base/_base.scss
+++ b/Assets/_scss/base/_base.scss
@@ -7,7 +7,7 @@
 
 
 /* =============================================================================
-$ Site-wrapper
+$ High level wrapper and elements
 ================================================================================ */
 body {
   /* Addresses margins handled incorrectly in IE6/7. */
