--- a/Assets/_scss/objects/_navigations.scss
+++ b/Assets/_scss/objects/_navigations.scss
@@ -40,6 +40,17 @@ $ Navigations
   a { display: block; }
 }
 
+/* ========================= Fit Navigation ========================= */
+/* Force a nav to occupy 100% of the available width of its parent. Extends
+ * Thanks to @pimpl for this idea! */
+.nav--fit {
+  display: table;
+  width: 100%;
+  > li {
+    display: table-cell;
+  }
+}
+
 /* ======================== Main Navigation ========================= */
 /*.nav*/.site-nav {
   // Main Navigation
