--- a/Assets/_scss/_settings/_shared.scss
+++ b/Assets/_scss/_settings/_shared.scss
@@ -13,8 +13,9 @@
 %reset-list {
 /* ========================== Reset list ========================= */
   list-style: none;
-  margin: 0;
-  padding: 0;
+  margin-top: 0;
+  margin-bottom: 0;
+  padding-left: 0;
 }
 
 %inline-block {
