--- a/Assets/_scss/objects/_navigations.scss
+++ b/Assets/_scss/objects/_navigations.scss
@@ -35,7 +35,7 @@ $ Navigations
 
 /* ======================= Stacked Navigation ======================= */
 /* Throws the list into vertical mode - used for DropDowns etc. */
-/*.nav*/.stacked ul li {
+/*.nav*/.stacked li {
   display: list-item;
 }
 
