Added variable driven offset-by-# classes insertion

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -36,6 +36,7 @@ $query-smartphoneSmall: 320px;  // Phone - Portrait
 // ============================== Grid System =============================
 $totalColumns:          12;     // Number of columns
 $columnGutter:          20;     // Inner spacing
+$includeOffsetClasses:  true;  // If set to 'true' .columns.offset-by-# classes are added
 
 // ============================== Backgrounds =============================
 $bodyBackground:        #fff;   // Will be set on <body>
