Added file-paths to file-header comments

--- a/Assets/_scss/base/_base.scss
+++ b/Assets/_scss/base/_base.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § base.scss */
+/* § /base/base.scss */
 //
 // Basic styling for this site (f.e. Header and Footer)
 // DOCS:
