--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § forms.scss */
+/* § /base/forms.scss */
 //
 // Basic styling for forms and inputs
 // DOCS:
