--- a/Assets/_scss/base/_headings.scss
+++ b/Assets/_scss/base/_headings.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § headings.scss */
+/* § /base/headings.scss */
 //
 // Styling for Headings and Sub-Headings
 // DOCS:
