--- a/Assets/_scss/base/_lists.scss
+++ b/Assets/_scss/base/_lists.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § lists.scss */
+/* § /base/lists.scss */
 //
 // Basic styling for typography elements
 // DOCS:
