--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § media.scss */
+/* § /base/media.scss */
 //
 // Basic styling for media elements e.g. Images, Video & Audio
 // DOCS:
