--- a/Assets/_scss/base/_typography.scss
+++ b/Assets/_scss/base/_typography.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § typography.scss */
+/* § /base/typography.scss */
 //
 // Basic styling for typography elements
 // DOCS:
