--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § grid.scss */
+/* § /generic/grid.scss */
 //
 // Sets up the grid
 // DOCS:
