--- a/Assets/_scss/generic/_helper.scss
+++ b/Assets/_scss/generic/_helper.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § helper.scss */
+/* § /generic/helper.scss */
 //
 // Helper Classes from the boilerplate project
 // DOCS: http://html5boilerplate.com/docs/css/#non-semantic-helper-classes
