--- a/Assets/_scss/generic/_normalize.scss
+++ b/Assets/_scss/generic/_normalize.scss
@@ -6,7 +6,7 @@
 }
 
 // ==========================================================
-/* § normalize.scss */
+/* § /generic/normalize.scss */
 //
 // Normalize the browser-default styling
 // DOCS: http://necolas.github.com/normalize.css/
