--- a/Assets/_scss/generic/_print.scss
+++ b/Assets/_scss/generic/_print.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § print.scss */
+/* § /generic/print.scss */
 //
 // Inlined to avoid another HTTP connection
 // DOCS: h5bp.com/r
