--- a/Assets/_scss/objects/_t3-general.scss
+++ b/Assets/_scss/objects/_t3-general.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § t3-general.scss */
+/* § /objects/t3-general.scss */
 //
 // Basic styling for typo3 generated elements and classes
 // DOCS:
