--- a/Assets/_scss/base/_links.scss
+++ b/Assets/_scss/base/_links.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § links.scss */
+/* § /base/links.scss */
 //
 // Basic styling for links
 // DOCS:
