--- a/Assets/_scss/base/_tables.scss
+++ b/Assets/_scss/base/_tables.scss
@@ -1,5 +1,5 @@
 // ==========================================================
-/* § tables.scss */
+/* § /base/tables.scss */
 //
 // Basic styling for tables
 // DOCS:
