Setting persistant cursor behavior in IE7 & IE6

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -53,6 +53,7 @@ textarea {
 input[type="checkbox"],
 input[type="radio"] {
   margin-right: .35em;
+  cursor: pointer;
 }
 
 /* ========================== Buttons ========================== */
