--- a/Assets/_scss/base/_links.scss
+++ b/Assets/_scss/base/_links.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ Links
 ================================================================================ */
-a {
+a:link {
   color: $linkColor;
   text-decoration: none;
 
