--- a/Assets/_scss/objects/_navigations.scss
+++ b/Assets/_scss/objects/_navigations.scss
@@ -25,7 +25,7 @@ $ Navigations
  */
 .nav {
   ul, ol { @extend %reset-list; }
-  li { display: inline-block; }
+  li { @extend %inline-block; }
   a {
     display: block;
     &:hover { }
