--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -27,7 +27,9 @@ img[height] { /* 1 */
 }
 figure {
   /* Addresses margin not present in IE6/7/8/9, S5, O11. */
-  margin: 0;
+  margin-left: 0;
+  margin-right: 0;
+  margin-top: 0;
   > img {
     display: block;
   }
