--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -90,8 +90,11 @@ fieldset {
 form {
   @if $oldIE == true {
     /* Corrects margin displayed oddly in IE6/7. */
-    margin: 0;
+    margin-top: 0;
+    margin-left: 0;
+    margin-right: 0;
   }
+  @extend %sass-margin-bottom;
   ol,
   ul { @extend %reset-list; }
 }
