Fixed hover reset for the .btn

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -71,10 +71,11 @@ input[type="submit"] {
   font-size: .8em;
   line-height: 1;
   color: color-adjust($cd-primary, 100%);
-  &:hover {
-    text-decoration: none;
-    color: color-adjust($cd-primary, 80%);
-  }
+}
+.btn:hover {
+  /* hover reset for the <a href="" class="btn"> element */
+  text-decoration: none;
+  color: color-adjust($cd-primary, 100%);
 }
 
 
