Removed duplicate <ul> & <ol> reset inside a <nav> element

--- a/Assets/_scss/base/_lists.scss
+++ b/Assets/_scss/base/_lists.scss
@@ -15,11 +15,12 @@ ul {
   padding: 0 0 0 40px;
 }
 
-nav ul,
-nav ol {
-  list-style: none;
-  list-style-image: none;
-}
+// Will be handled by the .nav abstraction
+// nav ul,
+// nav ol {
+//   list-style: none;
+//   list-style-image: none;
+// }
 
 li > ul,
 li > ol {
