Added a TYPO3 related width issue fix on images

--- a/Assets/_scss/objects/_t3-general.scss
+++ b/Assets/_scss/objects/_t3-general.scss
@@ -15,6 +15,9 @@ $ General stylings
 .align-right  { text-align: right; }
 .align-left   { text-align: left; }
 
+/* Fixes an TYPO3 IE8 float issue where images have no width */
+.csc-textpic-imagecolumn img { max-width: none; }
+
 
 /* =============================================================================
 $ CSC-Frames
