--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -34,9 +34,7 @@ img {
 }
 figure {
   /* Addresses margin not present in IE6/7/8/9, S5, O11. */
-  margin-left: 0;
-  margin-right: 0;
-  margin-top: 0;
+  margin: 0;
   > img {
     display: block;
   }
