Split chromeframe styling into a seperate file

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -42,6 +42,7 @@
 // =============================================================================
 @import "objects/_navigations";       // Navigations
 @import "objects/_t3-general";        // TYPO3 element styling
+@import "objects/_chromeframe";       // Google's Chromeframe styling
 
 
 // =============================================================================
