--- a/Assets/_scss/base/_media.scss
+++ b/Assets/_scss/base/_media.scss
@@ -12,9 +12,11 @@ $ Attachements & Images
             2: Styling the alt="" Text on images
                http://csswizardry.com/2011/06/styling-alt-text-on-images/
             3: Removes border when inside `a` element in IE6/7/8/9, FF3.
-            4: Improves image quality when scaled in IE7.
+            4: Remove the gap between images and the bottom of their containers:
+               h5bp.com/i/440
+            5: Improves image quality when scaled in IE7.
                code.flickr.com/blog/2008/11/12/on-ui-quality-the-little-things-client-side-image-resizing/
-            5: Decrease font-size on figcaption elements
+            6: Decrease font-size on figcaption elements
 ================================================================================ */
 embed,
 iframe,
@@ -25,8 +27,9 @@ img { /* 1 */
 img {
   font-style: italic; /* 2 */
   border: 0; /* 3 */
+  vertical-align: middle; /* 4 */
   @if $oldIE == true {
-    -ms-interpolation-mode: bicubic; /* 4 */
+    -ms-interpolation-mode: bicubic; /* 5 */
   }
   &[height] { /* 1 */
     height: auto;
@@ -39,7 +42,7 @@ figure {
     display: block;
   }
 }
-figcaption { /* 5 */
+figcaption { /* 6 */
   font-size: ($baseFontSize - 2) +px;
   font-size: rs(($baseFontSize - 2), $unit: rem);
 }
