Fixed @import description for _functions.scss

--- a/Assets/_scss/_settings/_all.scss
+++ b/Assets/_scss/_settings/_all.scss
@@ -6,5 +6,5 @@
 
 
 @import "_variables";             // SASS Settings
-@import "_functions";             // SASS Settings
+@import "_functions";             // SASS Functions
 @import "_mixins";                // SASS Mixins
