Fixed SASS @import order to be able to use color-adjust in _variables.scss

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -93,6 +93,6 @@ $linkColor:             lighten($cd-primary, 10%);
 $linkColorHover:        $cd-primary;
 
 // ================================ Borders ===============================
-$basicBorderColor:      darken($contentBackground, 20%);
+$basicBorderColor:      color-adjust($contentBackground, 20%);
 $basicBorderStyle:      solid;
 
