--- a/Assets/_scss/_settings/_functions.scss
+++ b/Assets/_scss/_settings/_functions.scss
@@ -46,6 +46,7 @@
 // =============================================================================
 // Text direction check - Based on code from suit (@necolas), https://github.com/necolas/suit
 // =============================================================================
+$direction: rtl !default;
 $start: left !default;
 $end: right !default;
 @if $direction == rtl {
