Better $var description for $oldIE

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -20,7 +20,7 @@
 // Project Settings
 // =============================================================================
 $responsive:            false;  // If set to 'true' CSS-Viewport-Rules are added
-$oldIE:                 true;   // If set to 'false' it will ignore IE6 & IE7 Hacks while compiling
+$oldIE:                 true;   // If set to 'false' IE6 & IE7 Hacks will be ignored while compiling
 $direction:             ltr;    // set "dir" attribute in HTML to "ltr" (default) or "rtl"
 
 
