--- a/Layouts/index.html
+++ b/Layouts/index.html
@@ -33,11 +33,11 @@
 	<div class="wrapper">
 
 		<div class="row clearfix">
-			<div class="first three columns"> </div>
+			<div class="columns--first three columns"> </div>
 
 			<div class="six columns"> </div>
 
-			<div class="last three columns"> </div>
+			<div class="columns--last three columns"> </div>
 		</div>
 
 	</div>
