--- a/Layouts/index.html
+++ b/Layouts/index.html
@@ -17,8 +17,8 @@
 <header class="site-header" role="banner">
 	<div class="wrapper">
 		<a class="siteLogo ir" href="">Logoname</a>
-		<nav class="nav site-nav" role="navigation">
-			<ul>
+		<nav role="navigation">
+			<ul class="nav site-nav">
 				<li class="active"><a href="">Lorem</a></li>
 				<li><a href="">ipsum</a></li>
 				<li><a href="">dolor</a></li>
