--- a/Assets/_scss/objects/_chromeframe.scss
+++ b/Assets/_scss/objects/_chromeframe.scss
@@ -6,19 +6,27 @@
 // ==========================================================
 
 
+// =============================================================================
+// Variables
+// =============================================================================
+$chromeframeHeight:     3.5em;
+$chromeframeFontSize:   12px;
+$chromeframeBackground: #faf6e8;
+
+
 /* =============================================================================
 $ Chromeframe
 ================================================================================ */
 /*<p>*/.chromeframe {
   display: block;
-  height: 3.5em;
+  height: $chromeframeHeight;
   border-bottom: 1px $basicBorderStyle #e7db9c;
-  background: #faf6e8;
+  background: $chromeframeBackground;
 
-  font-size: 12px;
-  line-height: 3.5em;
+  font-size: chromeframeFontSize;
+  line-height: $chromeframeHeight;
   text-align: center;
-  color: darken(#faf6e8, 60%);
+  color: darken($chromeframeBackground, 60%);
 
   @extend %non-print; // Will be hidden on print
   a { border-bottom: 1px dotted; }
