Removed $basicBorderStyle from .chromeframe
This should always be solid, as it should be visually seperated from
the main site

--- a/Assets/_scss/objects/_chromeframe.scss
+++ b/Assets/_scss/objects/_chromeframe.scss
@@ -20,7 +20,7 @@ $ Chromeframe
 /*<p>*/.chromeframe {
   display: block;
   height: $chromeframeHeight;
-  border-bottom: 1px $basicBorderStyle #e7db9c;
+  border-bottom: 1px solid #e7db9c;
   background: $chromeframeBackground;
 
   font-size: chromeframeFontSize;
