Added typographic helper classes

--- a/Assets/_scss/base/_typography.scss
+++ b/Assets/_scss/base/_typography.scss
@@ -117,6 +117,15 @@ hr {
 
 
 /* =============================================================================
+$ Typographic Helper Classes
+================================================================================ */
+.align-center { text-align: center; }
+.align-right  { text-align: right; }
+.align-left   { text-align: left; }
+.intend { padding: 0 20px; }
+
+
+/* =============================================================================
 $ Text-Selection
 ================================================================================ */
 ::-moz-selection,
