Added a %cf placeholder for a quicker clearfix @ extend

--- a/Assets/_scss/generic/_helper.scss
+++ b/Assets/_scss/generic/_helper.scss
@@ -60,7 +60,8 @@
 .invisible { visibility: hidden; }
 
 /* Contain floats: h5bp.com/q */
-.clearfix {
+.clearfix,
+%cf {
   @if $oldIE == true {
     *zoom:1;
   }
