--- a/Assets/_scss/base/_headings.scss
+++ b/Assets/_scss/base/_headings.scss
@@ -21,24 +21,24 @@ h4, h5, h6 {
   text-rendering: optimizeLegibility;
 }
 h1, .h1 {
-  @include font-size(36);
+  @include font-size(36, true);
 }
 h2, .h2 {
-  @include font-size(30);
+  @include font-size(30, true);
 }
 h3, .h3 {
-  @include font-size(24);
+  @include font-size(24, true);
 }
 h4, .h4 {
-  @include font-size(20);
+  @include font-size(20, true);
 }
 h5, .h5 {
-  @include font-size(16);
+  @include font-size(16, true);
   margin-top: 0;
   margin-bottom: 0;
 }
 h6, .h6 {
-  @include font-size(14);
+  @include font-size(14, true);
   margin-top: 0;
   margin-bottom: 0;
 }
