--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -34,8 +34,7 @@ input[type="month"],
 input[type="time"],
 input[type="week"] {
   border: 1px solid $basicBorderColor;
-  font-size: 14px;
-  font-size: rs(14, $unit: rem);
+  @include font-size(14);
   color: lighten($baseTextColor, 5%);
 }
 
