Added a hdpi-image helper mixin

--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -13,8 +13,10 @@
   width: image-width($img);
   height: image-height($img);
 }
-@mixin img-whr($img) {
+@mixin hdpi-img($img) {
   background-size: image-width($img)/2 image-height($img)/2;
+  background-image: image-url('#{$img}');
+}
 
 
 // =============================================================================
