Moved shared.scss to /generic

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -22,7 +22,7 @@
 // =============================================================================
 @import "generic/_normalize";         // Normalize elements accross all browsers
 @import "generic/_grid";              // Grid
-@import "_settings/_shared";          // SASS Placeholders
+@import "generic/_shared";            // SASS Placeholders
 
 
 // =============================================================================
