Fixed an import section comment

--- a/Assets/_scss/main.scss
+++ b/Assets/_scss/main.scss
@@ -47,7 +47,7 @@
 
 
 // =============================================================================
-// Helpers, placeholders and print styles
+// Helpers and print styles
 // =============================================================================
 @import "generic/_helper";            // Helper classes for developement
 @import "generic/_print";             // Print styles
