Added a slight padding to all text input fields

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -36,6 +36,7 @@ input[type="week"] {
   border: 1px solid $basicBorderColor;
   @include font-size(14);
   color: lighten($baseTextColor, 5%);
+  padding: 0.35em 0.5em;
 }
 
 /* ======================== Textinputs ========================= */
