Fix cursor style for disabled button `input`
As of
https://github.com/necolas/normalize.css/commit/5399ff9c0e6d60b4a96c1e38
8755137de52690b4

--- a/Assets/_scss/generic/_normalize.scss
+++ b/Assets/_scss/generic/_normalize.scss
@@ -139,7 +139,7 @@ input[type="submit"] {
  * Re-set default cursor for disabled elements.
  */
 button[disabled],
-input[disabled] {
+html input[disabled] {
   cursor: default;
 }
 
