Added a more flexible grid setup with a grid-mixin
The grid-mixin can be used for pretty much everything as you can pass
arguments like a prefix for mobile developement e.g.:
`@include grid(1 4 6 8 10 12, $prefix: 'm---');`

or setting the property e.g.:
`@include grid(1 4 6 8 10 12, $property: 'margin-left');`

--- a/Assets/_scss/_settings/_variables.scss
+++ b/Assets/_scss/_settings/_variables.scss
@@ -36,6 +36,7 @@ $query-smartphoneSmall: 320px;  // Phone - Portrait
 // ============================== Grid System =============================
 $totalColumns:          12;     // Number of columns
 $columnGutter:          20;     // Inner spacing
+$gridStack:             1 2 3 4 5 6 7 8 9 10 11 12; // Grid Width classes
 $includeOffsetClasses:  false;  // If set to 'true' .columns.offset-by-# classes are added
 
 // ============================== Backgrounds =============================
