--- a/Assets/_scss/_settings/_mixins.scss
+++ b/Assets/_scss/_settings/_mixins.scss
@@ -29,10 +29,42 @@
 
 
 // =============================================================================
+// Grid init Mixin
+// =============================================================================
+// Generates gird classes, with a bunch of options like setting a prefix or the property
+// e.g.:
+// @include grid(1 2 3 4 5 6 8 10 12, $prefix: 'm--', $property: 'height');
+// =============================================================================
+@mixin grid($stack, $prefix: '', $property: 'width', $type: '') {
+  // Depending on the $type it will adjust the calculation
+  @if $type == 'offset' { // Calculation fix for all offset-by classes
+
+    @each $i in $stack {
+      .#{$prefix}#{convert-number-to-word($i)} {
+        #{$property}: gridCalc($i, $totalColumns) + ($columnGutter);
+      }
+    }
+
+  } @else { // Standard case
+
+    // Starts the loop
+    @each $i in $stack {
+      // Set the class-prefix and convert the passed number to their word equivalents
+      .#{$prefix}#{convert-number-to-word($i)} {
+        // Sets the property and passes the calculation via the gridCalc function in _functions.scss
+        #{$property}: gridCalc($i, $totalColumns);
+      }
+    }
+
+  }
+}
+
+
+// =============================================================================
 // REM Unit Mixin
 // =============================================================================
 // Create a fully formed type style (sizing and vertical rhythm) by passing in a
-// single value, e.g.:
+// single value
 // Thanks to Harry Roberts (@csswizardry)
 // =============================================================================
 @mixin font-size($size, $append-vrythm: false) {
