--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -24,18 +24,17 @@ $ Grid Classes
 }
 // Layout modes and helper classes
 .columns--centered {
-  margin: 0 auto;
+  margin-left: auto;
+  margin-right: auto;
   float: none;
 }
 .columns--first { margin-#{$start}: 0; }
 .columns--last { margin-#{$end}: 0; }
 
 /* ========================== Grid widths ======================== */
-    }
-}
 @include grid($gridStack);
 
 @if ($includeOffsetClasses == true) {
   /* ====================== Grid offset helpers ==================== */
-  // Creating .columns.offset-by-# classes
+  @include grid($gridStack, $prefix: 'offset-by-', $property: 'margin-#{$start}', $type: 'offset');
 }
