Setting the grid width classes to the BEM namespace 'columns--'

--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -32,7 +32,7 @@ $ Grid Classes
 .columns--last { margin-#{$end}: 0; }
 
 /* ========================== Grid widths ======================== */
-@include grid($gridStack);
+@include grid($gridStack,  $prefix: 'columns--');
 
 @if ($includeOffsetClasses == true) {
   /* ====================== Grid offset helpers ==================== */
