Removed <figure> from the margin reset

--- a/Assets/_scss/base/_typography.scss
+++ b/Assets/_scss/base/_typography.scss
@@ -9,7 +9,7 @@
 /* =============================================================================
 $ Margins
 ================================================================================ */
-p, pre, ol, ul, dl, figure, menu {
+p, pre, ol, ul, dl, menu {
   /* neutralizing UA-Style margins */
   margin-top: 0;
 }
