Added prefixed support for opera hyphens

--- a/Assets/_scss/generic/_shared.scss
+++ b/Assets/_scss/generic/_shared.scss
@@ -52,5 +52,6 @@
   -webkit-hyphens: auto;
      -moz-hyphens: auto;
       -ms-hyphens: auto;
+       -o-hyphens: auto;
           hyphens: auto;
 }
