--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -70,10 +70,13 @@ input[type="submit"] {
   line-height: 1;
   color: color-adjust($cd-primary, 100%);
 }
-.btn:hover {
-  /* hover reset for the <a href="" class="btn"> element */
-  text-decoration: none;
+.btn:link {
   color: color-adjust($cd-primary, 100%);
+  &:hover {
+    /* hover reset for the <a href="" class="btn"> element */
+    text-decoration: none;
+    color: color-adjust($cd-primary, 100%);
+  }
 }
 
 
