--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -34,6 +34,9 @@ input[type="month"],
 input[type="time"],
 input[type="week"] {
   margin-bottom: 8px;
+  padding: 0.35em 0.5em;
+
+  background: $contentBackground;
   border: 1px solid $basicBorderColor;
   border-radius: $cd-borderRadius;
   @include box-shadow(inset 0 1px 1px rgba(#000, 0.075));
@@ -41,6 +44,13 @@ input[type="week"] {
   @include font-size(14);
   color: lighten($baseTextColor, 5%);
 }
+
+input::-webkit-datetime-edit {
+  /* A possible shadow-dom fix for webkit control spacing on input[type=time] */
+  margin-top: -.17em;
+  margin-bottom: -.17em;
+}
+
 
 /* ======================== Textinputs ========================= */
 textarea {
