Added a seperate section for buttons

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -67,7 +67,10 @@ input[type="radio"] {
   cursor: pointer;
 }
 
-/* ========================== Buttons ========================== */
+
+/* =============================================================================
+$ Buttons
+================================================================================ */
 .btn,
 button,
 input[type="button"],
