Fixed display setting for the btn class

--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -87,6 +87,7 @@ input[type="submit"] {
   color: color-adjust($cd-primary, 100%);
 }
 .btn:link {
+  @extend %inline-block;
   color: color-adjust($cd-primary, 100%);
   &:hover {
     /* hover reset for the <a href="" class="btn"> element */
