--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -56,6 +56,7 @@ input::-webkit-datetime-edit {
 textarea {
   min-height: 70px;
 
+  resize: vertical; /* So users cannot expand the textarea over its boundaries */
   overflow: auto; /* Removes default vertical scrollbar in IE6/7/8/9. */
   vertical-align: top; /* Improves readability and alignment in all browsers. */
 }
