--- a/Assets/_scss/generic/_grid.scss
+++ b/Assets/_scss/generic/_grid.scss
@@ -17,7 +17,7 @@ $grid-direction:  $start;
 $ Grid Classes
 ================================================================================ */
 /* ========================= Grid helper ========================= */
-.columns {
+[class^="column"] {
   // Base styles for .row .# classes
   float: $grid-direction;
   margin: 0 ($columnGutter / 2) +px;
