--- a/Assets/_scss/base/_forms.scss
+++ b/Assets/_scss/base/_forms.scss
@@ -86,6 +86,8 @@ input[type="submit"] {
   background: $cd-primary;
 
   font-size: .8em;
+  /* Normalize the font-weight accross <input>, <button> and the .btn clas */
+  font-weight: normal;
   line-height: 1;
   color: color-adjust($cd-primary, 100%);
 }
