--- a/Assets/_scss/generic/_shared.scss
+++ b/Assets/_scss/generic/_shared.scss
@@ -49,9 +49,5 @@
 /* ====================== CSS3 Word-breaker ====================== */
   -ms-word-break: break-all;
       word-break: break-all;
-  -webkit-hyphens: auto;
-     -moz-hyphens: auto;
-      -ms-hyphens: auto;
-       -o-hyphens: auto;
-          hyphens: auto;
+  @include hyphens(auto);
 }
